--- a/WebComponent/index.html
+++ b/WebComponent/index.html
@@ -6,45 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    custom-square {
-      margin: 20px;
+    a {
+      width: 200px;
+      height: 100px;
+      background-color: pink;
+      color: #000;
+      text-decoration: none;
     }
   </style>
-  <script type="module" src="./index.js" defer></script>
 </head>
 
 <body>
-  <p is="word-count">123</p>
-  <popup-info data-text="data-text"></popup-info>
-  <div class="control">control</div>
-  <ul is="ul-list" id="ul" class="ul">
-    <li>
-      UK
-      <ul>
-        <li>
-          Yorkshire
-          <ul>
-            <li>
-              Leeds
-              <ul>
-                <li>Train station</li>
-                <li>Town hall</li>
-                <li>Headrow</li>
-              </ul>
-            </li>
-            <li>Bradford</li>
-            <li>Hull</li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-
-  <div>
-    <button class="add">Add custom-square to DOM</button>
-    <button class="update">Update attributes</button>
-    <button class="remove">Remove custom-square from DOM</button>
-  </div>
+  <a href="./pages/web-component.html">认识web-component</a>
+  <a href="./pages/shadow-dom.html">认识shadowDom</a>
 </body>
 
 </html>
