fix：更改文档结构

--- a/WebComponent/index.html
+++ b/WebComponent/index.html
@@ -19,6 +19,7 @@
 <body>
   <a href="./pages/web-component.html">认识web-component</a>
   <a href="./pages/shadow-dom.html">认识shadowDom</a>
+  <a href="./pages/shadow-dom.html">在Web Component中使用模板</a>
 </body>
 
 </html>
