--- a/WebComponent/pages/shadow-dom.html
+++ b/WebComponent/pages/shadow-dom.html
@@ -10,7 +10,7 @@
       color: red
     }
   </style>
-  <script type="module" src="../index.js" defer></script>
+  <script type="module" src="../component/shadow-dom/index.js" defer></script>
 </head>
 
 <body>
