--- a/WebComponent/pages/web-component.html
+++ b/WebComponent/pages/web-component.html
@@ -10,7 +10,7 @@
       margin: 20px;
     }
   </style>
-  <script type="module" src="../index.js" defer></script>
+  <script type="module" src="../component/web-component/index.js" defer></script>
 </head>
 
 <body>
