feature: 在webcomponnet中使用模板

--- a/WebComponent/index.html
+++ b/WebComponent/index.html
@@ -19,7 +19,8 @@
 <body>
   <a href="./pages/web-component.html">认识web-component</a>
   <a href="./pages/shadow-dom.html">认识shadowDom</a>
-  <a href="./pages/shadow-dom.html">在Web Component中使用模板</a>
+  <a href="./pages/use-template.html">在Web Component中使用模板template</a>
+  <a href="./pages/use-template.html">在Web Component中使用插槽slot</a>
 </body>
 
 </html>
