--- a/WebComponent/index.html
+++ b/WebComponent/index.html
@@ -20,7 +20,8 @@
   <a href="./pages/web-component.html">认识web-component</a>
   <a href="./pages/shadow-dom.html">认识shadowDom</a>
   <a href="./pages/use-template.html">在Web Component中使用模板template</a>
-  <a href="./pages/use-template.html">在Web Component中使用插槽slot</a>
+  <a href="./pages/use-slot.html">在Web Component中使用插槽slot</a>
+  <a href="./pages/use-slot-deep.html">深入插槽slot的使用</a>
 </body>
 
 </html>
