feature: 测试开启shadow dom是否影响事件流（事件冒泡和事件捕获）

--- a/WebComponent/index.html
+++ b/WebComponent/index.html
@@ -22,6 +22,7 @@
   <a href="./pages/use-template.html">在Web Component中使用模板template</a>
   <a href="./pages/use-slot.html">在Web Component中使用插槽slot</a>
   <a href="./pages/use-slot-deep.html">深入插槽slot的使用</a>
+  <a href="./pages/test-bubble.html">shadow dom中的事件捕获和冒泡</a>
 </body>
 
 </html>
